--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -200,3 +200,7 @@ body {
 @media screen and (max-width:479px){
   .Searchbar > div > div > div{width:100% !important;}
 }
+
+/*.pdfpopupScroll{display: flex; height: 100vh; width: 100%; overflow: auto;}*/
+.pdfpopupScroll > div{margin: 0 auto;}
+.pdfPageCount{text-align: center; margin: 20px 0 10px; color: #fff;}
