--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -29,7 +29,10 @@ body {
   height: 100%;
 }
 
-.leftContainer > div > div > div{min-height: inherit !important; overflow: visible !important;}
+.leftContainer > div > div > div {
+  min-height: inherit !important;
+  overflow: visible !important;
+}
 
 .rightContentContainer {
   flex: 1; /*width: 100%;*/
@@ -73,10 +76,18 @@ body {
 }
 
 .printableScroll .ReactTable .rt-tbody .rt-td,
-.printableScroll .ReactTable .rt-thead .rt-th{max-width: none !important; min-width: 70px;}
-.printableScroll .ReactTable .rt-tbody .rt-td:last-child{padding-left:5px!important;}
+.printableScroll .ReactTable .rt-thead .rt-th {
+  max-width: none !important;
+  min-width: 70px;
+}
+.printableScroll .ReactTable .rt-tbody .rt-td:last-child {
+  padding-left: 5px !important;
+}
 .printableScroll .ReactTable .rt-tbody .rt-td:last-child span,
-.printableScroll .ReactTable .rt-thead .rt-th:last-child span{justify-content: center !important; padding-left:0 !important;}
+.printableScroll .ReactTable .rt-thead .rt-th:last-child span {
+  justify-content: center !important;
+  padding-left: 0 !important;
+}
 
 .contentScroll .ReactTable .rt-tbody .rt-td {
   padding: 11px 5px;
@@ -90,48 +101,128 @@ body {
 } */
 
 /*-----Login----------*/
-.formWidget{padding:0 15px; min-width: 450px;}
-.formWidget > div > div{width:auto !important;}
-.loginFormFrame > div > div{padding:0 !important;}
+.formWidget {
+  padding: 0 15px;
+  min-width: 450px;
+}
+.formWidget > div > div {
+  width: auto !important;
+}
+.loginFormFrame > div > div {
+  padding: 0 !important;
+}
 .loginFormFrame > div > div > div,
-.formInput  > div > div, .formInput  > div > div input{margin-left:0 !important; margin-right:0 !important;}
-.formInput  > div > div > div > div > div{background-size: 18px 18px!important;}
-.webButtonFrame > div > div > div{padding:0 15px !important; line-height: 60px; width:320px; margin:10px auto;}
-.webButtonFrame div{font-size: 18px!important; font-weight: 400 !important;}
+.formInput > div > div,
+.formInput > div > div input {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+.formInput > div > div > div > div > div {
+  background-size: 18px 18px !important;
+}
+.webButtonFrame > div > div > div {
+  padding: 0 15px !important;
+  line-height: 60px;
+  width: 320px;
+  margin: 10px auto;
+}
+.webButtonFrame div {
+  font-size: 18px !important;
+  font-weight: 400 !important;
+}
 
-.forgotPass{font-size: 16px;}
+.forgotPass {
+  font-size: 16px;
+}
 
-@media screen and (max-width:480px){
-  .formWidget{width: 100%; min-width: inherit;}
-  .webButtonFrame > div > div > div{width: 270px;}
+@media screen and (max-width: 480px) {
+  .formWidget {
+    width: 100%;
+    min-width: inherit;
+  }
+  .webButtonFrame > div > div > div {
+    width: 270px;
+  }
 }
 
 /*----OTP Screen----*/
-.otpMainScreen{display: flex; height: 100%; width: 100%;}
-.otpMainScreen > div > div > div{justify-content: center !important;}
-.otpinput {display: inline-table; margin: 0 auto 20px;}
-.otpinput > div > div > div {margin-top: 0 !important; margin-bottom: 0 !important;}
-.webButtonFrame > div > div { top: 0 !important;}
-.loginTopText > div > div { height: auto !important;  padding-bottom: 0 !important;}
-.loginTopText > div > div > div { margin-bottom: 10px;}
-.otpInputcontainer > div input {height: 100%; padding-top: 0 !important; color: #000;  border-color: black;
-  border-width: 1px;  height: 50px;  margin: 0 10px;  border-radius: 10px;}
-  .otpInputcontainer > div input:focus{outline: none;}
-.flatListScroll {  height: calc(100vh - 90px);  overflow: auto;  width: calc(100vw - 260px);}
+.otpMainScreen {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+.otpMainScreen > div > div > div {
+  justify-content: center !important;
+}
+.otpinput {
+  display: inline-table;
+  margin: 0 auto 20px;
+}
+.otpinput > div > div > div {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+.webButtonFrame > div > div {
+  top: 0 !important;
+}
+.loginTopText > div > div {
+  height: auto !important;
+  padding-bottom: 0 !important;
+}
+.loginTopText > div > div > div {
+  margin-bottom: 10px;
+}
+.otpInputcontainer > div input {
+  height: 100%;
+  padding-top: 0 !important;
+  color: #000;
+  border-color: black;
+  border-width: 1px;
+  height: 50px;
+  margin: 0 10px;
+  border-radius: 10px;
+}
+.otpInputcontainer > div input:focus {
+  outline: none;
+}
+.flatListScroll {
+  height: calc(100vh - 90px);
+  overflow: auto;
+  width: calc(100vw - 260px);
+}
 
-@media screen and (max-height:500px){
-  .otpMainScreen > div > div > div{justify-content: initial !important;}
+@media screen and (max-height: 500px) {
+  .otpMainScreen > div > div > div {
+    justify-content: initial !important;
+  }
 }
 
 /*-----*/
-.mainView{width: 50%; padding:15px;}
+.mainView {
+  width: 50%;
+  padding: 15px;
+}
 
-.skillList > div > div{padding:7px 15px;}
-.mainView > div > div{width: 100% !important; margin:0!important;}
-.skillView > div {margin: 0!important; padding: 5px!important;}
+.skillList > div > div {
+  padding: 7px 15px;
+}
+.mainView > div > div {
+  width: 100% !important;
+  margin: 0 !important;
+}
+.skillView > div {
+  margin: 0 !important;
+  padding: 5px !important;
+}
 .skillView > div > div,
-.skillView > div > div > div > div{padding: 0!important; font-size:12px!important;}
-.skillView > div > div > div{min-width: 56px; padding:8px 10px!important; }
+.skillView > div > div > div > div {
+  padding: 0 !important;
+  font-size: 12px !important;
+}
+.skillView > div > div > div {
+  min-width: 56px;
+  padding: 8px 10px !important;
+}
 
 .skillView > div > div > div:hover {
   background: rgb(45, 62, 157, 1) !important;
@@ -146,26 +237,78 @@ body {
 }
 
 .MyPatientsDetailsWrapper > div,
-.PatientsDetails > div{width:100%!important;}
-.MyPatientsDetailsWrapper{width:33.33%; text-align: center;}
-.MyPatientsDetailsWrapper > div > div, 
-.Patienticon > div > div{width:auto!important; height:auto!important;}
-.Patienticon img{max-width:22px!important; height:auto!important;}
-.Patienticon > div{display: flex; align-items: center; justify-content: center; height: 50px!important;}
-.Patienticon, .Patienticon > div > div, .Patienticon img{position: relative!important;}
-.patientDetailsWrapper > div > div{width:100%!important;} 
+.PatientsDetails > div {
+  width: 100% !important;
+}
+.MyPatientsDetailsWrapper {
+  width: 33.33%;
+  text-align: center;
+}
+.MyPatientsDetailsWrapper > div > div,
+.Patienticon > div > div {
+  width: auto !important;
+  height: auto !important;
+}
+.Patienticon img {
+  max-width: 22px !important;
+  height: auto !important;
+}
+.Patienticon > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px !important;
+}
+.Patienticon,
+.Patienticon > div > div,
+.Patienticon img {
+  position: relative !important;
+}
+.patientDetailsWrapper > div > div {
+  width: 100% !important;
+}
 
-.loader{position: absolute; display: flex; width: 100%; height: 100%; top: 0;}
-.LinearGaredientSideMenu{background: #2d5aad; /* Old browsers */
-  background: -moz-linear-gradient(top, #2d5aad 0%, #2f7bbf 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #2d5aad 0%,#2f7bbf 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #2d5aad 0%,#2f7bbf 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d5aad', endColorstr='#2f7bbf',GradientType=0 ); /* IE6-9 */}
-.ProfileDetailSideMenu{padding: 0 15px; word-break: break-all; line-height: 1.5;}
-.ProfileDetailSideMenu > div > div{margin:0 auto 10px;}
-#leftMenuBar > div > div > div > div{margin-bottom:0 !important;}
-@media screen and (max-width:992px){
-    .mainView{width: 100%;}
+.loader {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
+.LinearGaredientSideMenu {
+  background: #2d5aad; /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    #2d5aad 0%,
+    #2f7bbf 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    #2d5aad 0%,
+    #2f7bbf 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #2d5aad 0%,
+    #2f7bbf 100%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d5aad', endColorstr='#2f7bbf',GradientType=0 ); /* IE6-9 */
+}
+.ProfileDetailSideMenu {
+  padding: 0 15px;
+  word-break: break-all;
+  line-height: 1.5;
+}
+.ProfileDetailSideMenu > div > div {
+  margin: 0 auto 10px;
+}
+#leftMenuBar > div > div > div > div {
+  margin-bottom: 0 !important;
+}
+@media screen and (max-width: 992px) {
+  .mainView {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -186,94 +329,287 @@ body {
 
 /*----Printable page----*/
 
-.Searchbar > div > div{padding:25px 15px; }
-.Searchbar > div > div > div{margin:0 !important; height: 48px !important; border-color:#E1E1E1 !important;}
-.Searchbar input{font-size:16px !important;}
+.Searchbar > div > div {
+  padding: 25px 15px;
+}
+.Searchbar > div > div > div {
+  margin: 0 !important;
+  height: 48px !important;
+  border-color: #e1e1e1 !important;
+}
+.Searchbar input {
+  font-size: 16px !important;
+}
 .Searchbar > div > div > div > div,
-.Searchbar > div > div > div > div > div{ width: 48px !important;}
+.Searchbar > div > div > div > div > div {
+  width: 48px !important;
+}
 
-.dBlockContainer{display: block!important;}
-.printableScroll .ReactTable{margin: 0 auto; max-width: 1000px!important;}
-.printableScroll .ReactTable .rt-thead > div > div{font-size: 13px !important;}
-.printableScroll .ReactTable .rt-tbody{max-height:calc(100vh - 260px); overflow: auto;}
+.dBlockContainer {
+  display: block !important;
+}
+.printableScroll .ReactTable {
+  margin: 0 auto;
+  max-width: 1000px !important;
+}
+.printableScroll .ReactTable .rt-thead > div > div {
+  font-size: 13px !important;
+}
+.printableScroll .ReactTable .rt-tbody {
+  max-height: calc(100vh - 260px);
+  overflow: auto;
+}
 
-.toastWidget{position: relative;}
-.toastWidget > div > div{max-width: 250px; padding-left: 15px !important; padding-right: 15px !important;}
-.closeToast{position: absolute; right:15px; top: 15px;}
+.toastWidget {
+  position: relative;
+}
+.toastWidget > div > div {
+  max-width: 250px;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
+}
+.closeToast {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+}
 .closeToast > div > div,
-.closeToast > div > div > div{width: 15px !important; height: 15px !important;}
-.ToastText{width: 100%;}
-.ToastTextInner{padding-left: 30px; position: relative;}
-.ToastRightIcon > div > div{width:100% !important}
-.ToastRightIcon > div > div > div{padding-left: 0 !important; padding-right: 0 !important; line-height: 1.2;}
-.ToastLeftIcon > div > div{align-items: flex-start;}
+.closeToast > div > div > div {
+  width: 15px !important;
+  height: 15px !important;
+}
+.ToastText {
+  width: 100%;
+}
+.ToastTextInner {
+  padding-left: 30px;
+  position: relative;
+}
+.ToastRightIcon > div > div {
+  width: 100% !important;
+}
+.ToastRightIcon > div > div > div {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  line-height: 1.2;
+}
+.ToastLeftIcon > div > div {
+  align-items: flex-start;
+}
 
-@media screen and (max-width:479px){
-  .Searchbar > div > div > div{width:100% !important;}
+@media screen and (max-width: 479px) {
+  .Searchbar > div > div > div {
+    width: 100% !important;
+  }
 }
 
 /*.pdfpopupScroll{display: flex; height: 100vh; width: 100%; overflow: auto;}*/
-.pdfpopupScroll > div{margin: 0 auto;}
-.pdfPageCount{text-align: center; margin: 20px 0 10px; color: #fff;}
-.imageCrossPopUp > div{background: rgba(0, 0, 0, 0.7); height: 40px; width: 40px; border-radius:50%; -webkit-border-radius:50%; padding:10px;}
+.pdfpopupScroll > div {
+  margin: 0 auto;
+}
+.pdfPageCount {
+  text-align: center;
+  margin: 20px 0 10px;
+  color: #fff;
+}
+.imageCrossPopUp > div {
+  background: rgba(0, 0, 0, 0.7);
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  padding: 10px;
+}
 
-@media all and (max-width:767px){
-  .pdfpopupScroll{width:100%; overflow: auto;}
+@media all and (max-width: 767px) {
+  .pdfpopupScroll {
+    width: 100%;
+    overflow: auto;
+  }
 }
 
 /*---Message Center---*/
-.messageTopBar, .messageFilter, .messageCounter{padding:10px 20px; border-bottom:1px #dce2f0 solid;}
-.messageTitle{min-width: 150px;}
-.messageTitle > div{display: -webkit-box;  display: -ms-flexbox;  display: flex; -webkit-box-align: center;  -ms-flex-align: center;  align-items: center;}
-.messageTitle > div > div:first-child{margin-right: 10px; height: 18px !important; width: 21px !important;}
-.messageTitle > div div + div:before{ border: none !important;}
-.messageTitle > div > div + div > div > div{font-size: 18px!important; color:#2E5CAE; font-weight:500; text-transform: uppercase;}
-.messageTitle > div > div > div{background-size:auto 100% !important;}
-.messageTitle .MuiSelect-selectMenu-5{min-height: 1; line-height: 1;}
+.messageTopBar,
+.messageFilter,
+.messageCounter {
+  padding: 10px 20px;
+  border-bottom: 1px #dce2f0 solid;
+}
+.messageTitle {
+  min-width: 150px;
+}
+.messageTitle > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.messageTitle > div > div:first-child {
+  margin-right: 10px;
+  height: 18px !important;
+  width: 21px !important;
+}
+.messageTitle > div div + div:before {
+  border: none !important;
+}
+.messageTitle > div > div + div > div > div {
+  font-size: 18px !important;
+  color: #2e5cae;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.messageTitle > div > div > div {
+  background-size: auto 100% !important;
+}
+.messageTitle .MuiSelect-selectMenu-5 {
+  min-height: 1;
+  line-height: 1;
+}
 
-.messageSearch{min-width: 30%;;}
-.messageSearch > div{margin: 0 !important; width: 100%  !important; border-color: #d7d7d7 !important; height: 45px !important;}
-.composeEmail{font-size: 12px; font-weight: 700; text-transform: uppercase;}
+.messageSearch {
+  min-width: 30%;
+}
+.messageSearch > div {
+  margin: 0 !important;
+  width: 100% !important;
+  border-color: #d7d7d7 !important;
+  height: 45px !important;
+}
+.composeEmail {
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
 
-.messageFilter > div, .messageCounter > div{min-height: 34px;}
-.messageCounter > div{padding: 0 !important;}
-.messageFilter > div:first-child:before{border: none !important;}
-.messageFilter > div > div > div{font-size: 16px !important; color: rgba(51,51,51,0.6); font-weight: 500;}
-.messageCounter > div > div{right: 0 !important; color: rgba(51,51,51,0.6);}
-.messageCounter > div > div:first-child{width: 15px !important; height: 19px !important; margin-right: 15px;}
-.messageCounter > div > div:last-child > div{width: 8px !important; height: 14px !important; margin: 0 10px;}
+.messageFilter > div,
+.messageCounter > div {
+  min-height: 34px;
+}
+.messageCounter > div {
+  padding: 0 !important;
+}
+.messageFilter > div:first-child:before {
+  border: none !important;
+}
+.messageFilter > div > div > div {
+  font-size: 16px !important;
+  color: rgba(51, 51, 51, 0.6);
+  font-weight: 500;
+}
+.messageCounter > div > div {
+  right: 0 !important;
+  color: rgba(51, 51, 51, 0.6);
+}
+.messageCounter > div > div:first-child {
+  width: 15px !important;
+  height: 19px !important;
+  margin-right: 15px;
+}
+.messageCounter > div > div:last-child > div {
+  width: 8px !important;
+  height: 14px !important;
+  margin: 0 10px;
+}
 
-.messageList > div > div{padding: 15px; border-bottom:1px #dce2f0 solid; height: auto; line-height: 1.4;}
-.messageList > div > div > div:last-child{height: auto !important; display: block !important; flex: 1; padding: 0;}
-.messageList > div > div > div:last-child > div > div{font-size: 12px !important; color:#8F8F8F !important;}
-.messageList > div > div > div:last-child > div:first-child{margin-bottom: 8px !important;}
-.messageList > div > div > div:last-child > div:last-child{font-size: 14px !important; font-weight: 600; color: #1F2056 !important;}
-.msgDetailsSection{padding:0 20px;}
+.messageList > div > div {
+  padding: 15px;
+  border-bottom: 1px #dce2f0 solid;
+  height: auto;
+  line-height: 1.4;
+}
+.messageList > div > div > div:last-child {
+  height: auto !important;
+  display: block !important;
+  flex: 1;
+  padding: 0;
+}
+.messageList > div > div > div:last-child > div > div {
+  font-size: 12px !important;
+  color: #8f8f8f !important;
+}
+.messageList > div > div > div:last-child > div:first-child {
+  margin-bottom: 8px !important;
+}
+.messageList > div > div > div:last-child > div:last-child {
+  font-size: 14px !important;
+  font-weight: 600;
+  color: #1f2056 !important;
+}
+.msgDetailsSection {
+  padding: 0 20px;
+}
 
-@media screen and (min-width:1366px){
-  .messageList > div > div > div:last-child > div:last-child{font-size: 16px !important;}
+@media screen and (min-width: 1366px) {
+  .messageList > div > div > div:last-child > div:last-child {
+    font-size: 16px !important;
+  }
 }
 
 @media screen and (min-width: 768px) {
-  .messageTopBar{min-height: 75px;}
-  .messageListSection{width:30%;}
-  .messageDetailsSection{width: 70%; border-left:1px #dce2f0 solid;}
-  .d-sm-flex{display: -webkit-box!important;  display: -ms-flexbox!important;  display: flex!important;}
+  .messageTopBar {
+    min-height: 75px;
+  }
+  .messageListSection {
+    width: 30%;
+  }
+  .messageDetailsSection {
+    width: 70%;
+    border-left: 1px #dce2f0 solid;
+  }
+  .d-sm-flex {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
 }
 
-@media screen and (max-width:767px){
-  .composeEmail{position: fixed; height: 44px; width: 44px; right:20px; bottom: 20px; border-radius:50%; background: #333;}
-  .composeEmail > div{margin: auto !important;}
-  .composeEmail div + div{display: none;}
-  .messageSearch{margin-top: 15px;}
+@media screen and (max-width: 767px) {
+  .composeEmail {
+    position: fixed;
+    height: 44px;
+    width: 44px;
+    right: 20px;
+    bottom: 20px;
+    border-radius: 50%;
+    background: #333;
+  }
+  .composeEmail > div {
+    margin: auto !important;
+  }
+  .composeEmail div + div {
+    display: none;
+  }
+  .messageSearch {
+    margin-top: 15px;
+  }
 
-  .messageTitle > div{justify-content: center;}
+  .messageTitle > div {
+    justify-content: center;
+  }
 }
-
 
 /*----At Bottom---*/
-.w-100{width: 100%!important;}
-.ml-auto{margin-left: auto;}
-.d-flex{display: -webkit-box!important;  display: -ms-flexbox!important;  display: flex!important;}
-.align-items-center { -webkit-box-align: center!important;  -ms-flex-align: center!important;  align-items: center!important;}
-
+.w-100 {
+  width: 100% !important;
+}
+.ml-auto {
+  margin-left: auto;
+}
+.d-flex {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+.align-items-center {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  align-items: center !important;
+}
+.MuiInput-underline-12:before {
+  border-bottom: 0px solid rgba(0, 0, 0, 0.42) !important;
+}
+.MuiInput-underline-12:after {
+  border-bottom: 0px solid rgba(0, 0, 0, 0.42) !important;
+}
