--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -243,18 +243,27 @@ body {
 .messageCounter > div > div:first-child{width: 15px !important; height: 19px !important; margin-right: 15px;}
 .messageCounter > div > div:last-child > div{width: 8px !important; height: 14px !important; margin: 0 10px;}
 
-.messageList > div > div{padding: 15px; border-bottom:1px #dce2f0 solid; height: auto; line-height: 1.4;}
+.messageList > div > div{padding: 10px 15px; border-bottom:1px #dce2f0 solid; height: auto; line-height: 1.4;}
+.messageList > div > div > div:first-child{margin-left: 0 !important;}
 .messageList > div > div > div:last-child{height: auto !important; display: block !important; flex: 1; padding: 0;}
 .messageList > div > div > div:last-child > div > div{font-size: 12px !important; color:#8F8F8F !important;}
-.messageList > div > div > div:last-child > div:first-child{margin-bottom: 8px !important;}
+.messageList > div > div > div:last-child > div:first-child{margin-bottom: 3px !important;}
 .messageList > div > div > div:last-child > div:last-child{font-size: 14px !important; font-weight: 600; color: #1F2056 !important;}
 .msgDetailsSection{padding:0 20px;}
+.messageListSection{width: 100%;}
+
+.msgListWidget{overflow: auto;}
+.messageDetailTop > div > div,
+.messageDetailTop > div > div > div:last-child{align-items: center;}
+.messageDetailTop > div > div > div:first-child{padding:0 !important;}
 
 @media screen and (min-width:1366px){
   .messageList > div > div > div:last-child > div:last-child{font-size: 16px !important;}
 }
 
 @media screen and (min-width: 768px) {
+  .composeEmail > div{display:-wedkit-box; display: -ms-flexbox; display: flex; flex-direction: row;} 
+  .composeEmail > div > div:first-child{height: 22px!important; width: 22px!important; margin-right: 10px;}
   .messageTopBar{min-height: 75px;}
   .messageListSection{width:30%;}
   .messageDetailsSection{width: 70%; border-left:1px #dce2f0 solid;}
@@ -266,10 +275,13 @@ body {
   .composeEmail > div{margin: auto !important;}
   .composeEmail div + div{display: none;}
   .messageSearch{margin-top: 15px;}
-
   .messageTitle > div{justify-content: center;}
 }
 
+
+@media screen and (max-width: 768px) {
+  .d-xs-none{display: none !important;}
+}
 
 /*----At Bottom---*/
 .w-100{width: 100%!important;}
