--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -613,3 +613,8 @@ body {
 .MuiInput-underline-12:after {
   border-bottom: 0px solid rgba(0, 0, 0, 0.42) !important;
 }
+.messageOptions {
+  width: 25px !important;
+  margin-left: 10px !important;
+  padding-top: 10px !important;
+}
